--- a/NetProject/NetProject2/appsettings.json
+++ b/NetProject/NetProject2/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "connection string"
+    "DefaultConnection": "Data Source=C:/Users/Gl/source/repos/.NetInC#Language/NetProject/NetProject2/sqlite20250404.db"
   }
 }
